--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="favicon" rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./css/aos.css">
     <title>Ritik Jaiswal</title>
 </head>
 
 <body class="body">
     <div class="body2">
-        <div class="navbarsection">
-            <div class="logoname">
+        <nav class="navbarsection">
+            <div class="logoname nav">
                 <img src="img/logo.png" alt="mylogo"
                     style="margin-right: 10px; width: 40px; height: 40px; border-radius: 30px;">
                 <h4>Ritik Jaiswal</h4>
@@ -21,7 +20,7 @@
                 <i class="fa-sharp fa-solid fa-bars barr"></i>
             </div>
 
-            <div class=" mobile menu">
+            <div class="mobile menu">
                 <ul>
                     <li><a class="active" href="#Home">Home</a></li>
                     <li><a href="#About">About</a></li>
@@ -30,7 +29,7 @@
                     <!-- <li><a href="#Contact">Contact</a></li> -->
                 </ul>
             </div>
-        </div>
+        </nav>
 
         <!-- --------------------------- Home ----------------------------------------- -->
         <!-- <section class="home" id="Home">
@@ -207,12 +206,6 @@
 
 
     <script src="script.js"></script>
-    <script src="./javaScript/aos.js"></script>
-    <script>
-        AOS.init({
-            easing: 'ease-in-out-sine'
-        });
-    </script>
     <script src="https://kit.fontawesome.com/e969017409.js" crossorigin="anonymous"></script>
 </body>
 
