--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="write">
                             <p>Quote Generator. <br>
                                 Implemeted using Node-js</p>
-                            <a href="https://github.com/Ritik-Tp-179/Quote-Generator" target="_blank"><button
+                            <a href="https://quotegenerator-rj.onrender.com target="_blank"><button
                                     class="div but">Open</button></a>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                         <div class="title">To-Do-List</div>
                         <div class="write">
                             <p>To-Do-List Website. <br>Implemented using Node-js</p>
-                            <a href="https://github.com/Ritik-Tp-179/To-Do-List" target="_blank"><button
+                            <a href="https://to-do-list-rj.onrender.com" target="_blank"><button
                                     class="div but">Open</button></a>
                         </div>
                     </div>
