--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="write">
                             <p>Quote Generator. <br>
                                 Implemeted using Node-js</p>
-                            <a href="https://quotegenerator-rj.onrender.com target="_blank"><button
+                            <a href="https://quotegenerator-rj.onrender.com" target="_blank"><button
                                     class="div but">Open</button></a>
                         </div>
                     </div>
