Added photo and minor changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#About">About</a></li>
                     <li><a href="#Skills">Skills</a></li>
                     <li><a href="#Project">Project</a></li>
-                    <!-- <li><a href="#Contact">Contact</a></li> -->
+                    <li><a href="#Contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,10 +49,10 @@
                     <span id="red"> Hello,</span> I'm<br />
                     Ritik Jaiswal
                 </h2>
-                <p>i am into <span class="typing-text"></span><span>|</span></p>
+                <p>I am into <span class="typing-text"></span><span>|</span></p>
                 <a href="mailto:ritiktp@gmail.com" target="_blank"><button class="div but">Email me</button></a><br>
             </div>
-            <img data-tilt data-tilt-scale="1.1" src="./img/logo.png" alt="">
+            <img data-tilt data-tilt-scale="1.1" src="./img/My Photo1.jpg" alt="">
 
         </section>
 
@@ -185,13 +185,14 @@
                     <p><i class="fas fa-envelope"></i>ritiktp@gmail.com</p>
                     <p><i class="fas fa-map-marked-alt"></i>Thane, Maharashtra, India</p>
                     <div class="share">
-                        <a href="https://github.com/Ritik-Tp-179" aria-label="GitHub" target="_blank"><i
-                                class="fab fa-github"></i></a>
+                        <a href="https://github.com/Ritik-Tp-179" class="fa-brands fa-github" aria-label="GitHub" target="_blank">
+                            <!-- <i class="fab fa-github"></i> -->
+                        </a>
                         <a href="mailto:ritiktp@gmail.com" class="fas fa-envelope" aria-label="Mail"
                             target="_blank"></a>
                         <a href="https://instagram.com/its___me___ritik_?igshid=N2JhNDIwYjc=" class="fab fa-instagram"
                             aria-label="instagram" target="_blank"></a>
-                        <a href="https://www.linkedin.com/in/ritik-jaiswal-03a958249" class="fab fa-linkedin"
+                        <a href="https://www.linkedin.com/in/ritik-jaiswal-179dprk" class="fab fa-linkedin"
                             aria-label="linkedin" target="_blank"></a>
                     </div>
                 </div>
