--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div>
                     <a href="https://github.com/Ritik-Tp-179" target="_blank"><button data-aos="fade-left" class="div">
                             Github</button></a><br>
-                    <a href="./my-cv.jpg" target="_blank"><button data-aos="fade-left" class="div">CV</button></a>
+                    <a href="./Ritik Jaiswal rjs.pdf" target="_blank"><button data-aos="fade-left" class="div">CV</button></a>
                 </div>
             </div>
         </section>
